# cadence

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  ROADMAP_LITESTREAM.md  config.ini.example  config.production.ini  docker-compose.yml  pyproject.toml  wsgi.py
database/: schema.sql
database/migrations/: 002_gatekeeper_auth.sql
scripts/: generate_fake_users.py
src/cadence/: __init__.py  cli.py  config.py  db.py  web.py
src/cadence/blueprints/: __init__.py  admin.py  auth.py  tags.py  tasks.py
src/cadence/models/: __init__.py  activity.py  attachment.py  comment.py  notification.py  tag.py  task.py  task_tag.py  task_watcher.py  user.py
src/cadence/services/: __init__.py  attachment_service.py  email_service.py  notification_service.py  ntfy_service.py
src/cadence/static/css/: app.css
src/cadence/static/js/: app.js
src/cadence/templates/: base.html  index.html
src/cadence/templates/admin/: _reports.html  _user_row.html  _users_list.html  backups.html  index.html  reports.html  users.html
src/cadence/templates/auth/: login.html  login_sent.html  settings.html  setup_profile.html
src/cadence/templates/tags/: _list.html  edit.html  index.html
src/cadence/templates/tasks/: _activity.html  _attachments.html  _comments.html  _list.html  _status.html  _tags.html  _watch_button.html  _watchers.html  form.html  index.html  view.html
worker/: __init__.py  notification_worker.py
